--- a/app/views/home.jade
+++ b/app/views/home.jade
@@ -7,6 +7,7 @@ html(lang='en', ng-app="feedApp")
     link(rel="stylesheet", type="text/css", href="bower_components/bootstrap/dist/css/bootstrap.min.css")
     link(rel="stylesheet", type="text/css", href="css/style.css")
     script(src="bower_components/angular/angular.min.js")
+    script(src="bower_components/moment/moment.js")
     script(src="js/feedApp.js")
     script(src="js/services/api.js")
     script(src="js/controllers/postCtrl.js")
